# trevex

./: CMakeLists.txt  LICENSE  README.md  tvx.py
framework/: command_ctrl.py  command_dev.py  command_result.py  command_run.py  command_setup.py  common.py  result_classification.py  result_export.py  result_view.py
framework/export_template/: main.c
pocs/amd-fpdss/: Makefile  README.md  attacker.c  cacheutils.h  victim.c
pocs/amd-fpdss/victim-kmod/: Makefile  dss-victim.c  dss-victim.h
pocs/amd-fpvi-variant/: Makefile  README.md  cacheutils.h  main.c
pocs/intel-zero-at-ret/giner-reproduction/: Makefile  README.md
pocs/intel-zero-at-ret/giner-reproduction/App/: App.cpp
pocs/intel-zero-at-ret/giner-reproduction/Enclave/: Enclave.cpp
pocs/intel-zero-at-ret/simple-demo/: Makefile  README.md  cacheutils.h  dataidx-accessbit.c  dataidx-float.c  ptedit_header.h  vtable.c
pocs/zhaoxin-fpvi/: README.md  cacheutils.h  main.c
src/: common.h  config.h  core.cc  core.h  executor.cc  executor.h  main.cc  testcase_generator.cc  testcase_generator.h  utils.cc  utils.h
src/cacheutils/: cacheutils.cc  cacheutils.h
src/logger/: logger.cc  logger.h
src/victims/: kernel_victim.cc  kernel_victim.h  victim.h
